--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -42,8 +42,8 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.</p>
 
 <h2><a name="news">News</a></h2>
 
-<div class="news-date">Fri June 2 2006: </div> <p class="news-text"><a
-href="@PACKAGE_URL@padevchooser-0.9.1.tar.gz">Version 0.9.1</a> released; add a <tt>.desktop</tt> file; update icons everywhere</p>
+<div class="news-date">Sat Jul 8 2006: </div> <p class="news-text"><a
+href="@PACKAGE_URL@padevchooser-0.9.2.tar.gz">Version 0.9.2</a> released; initial release</p>
 
 <h2><a name="overview">Overview</a></h2>
 
@@ -79,7 +79,7 @@ source code configuration.</p>
 
 <p><tt>padevchooser</tt> requires GTK 2.4, <tt>libnotify</tt>, GConf installed.</p>
 
-<p>Obviously <tt>padevchooser</tt> requires an installation of PulseAudio (version 0.9.2).</p>
+<p>Obviously <tt>padevchooser</tt> requires an installation of <a href="http://pulseaudio.org/">PulseAudio</a> (version 0.9.2).</p>
 
 <h2><a name="installation">Installation</a></h2>
 
@@ -106,7 +106,7 @@ compilation and <tt>make install</tt> (as root) for installation of
 <p>If you want to be notified whenever I release a new version of this software use the subscription feature of <a href="http://freshmeat.net/projects/padevchooser/">Freshmeat</a>.</p>
 
 <hr/>
-<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, June 2006</address>
+<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, July 2006</address>
 <div class="grey"><i>$Id$</i></div>
 
 </body>
