update docs a little
git-svn-id: file:///home/lennart/svn/public/padevchooser/trunk@18 e4aeda27-4315-0410-ac56-b21855d76123

--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -79,7 +79,11 @@ source code configuration.</p>
 
 <p><tt>padevchooser</tt> requires GTK 2.4, <tt>libnotify</tt>, GConf installed.</p>
 
-<p>Obviously <tt>padevchooser</tt> requires an installation of <a href="http://pulseaudio.org/">PulseAudio</a> (version 0.9.2).</p>
+<p>Obviously <tt>padevchooser</tt> requires an installation of <a
+href="http://pulseaudio.org/">PulseAudio</a> (version 0.9.2), compiled
+with ZeroConf support. For being discovered correctly PulseAudio
+servers need to load <tt>module-zeroconf-publish</tt> and
+<tt>module-native-protocol-tcp</tt>.</p>
 
 <h2><a name="installation">Installation</a></h2>
 
