--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -42,6 +42,9 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.</p>
 
 <h2><a name="news">News</a></h2>
 
+<div class="news-date">Sat Aug 26 2006: </div> <p class="news-text"><a
+href="@PACKAGE_URL@padevchooser-0.9.3.tar.gz">Version 0.9.3</a> released; add menu item for starting the <a href="http://0pointer.de/lennart/projects/paprefs/">PulseAudio Preferences</a></p>
+
 <div class="news-date">Sat Jul 8 2006: </div> <p class="news-text"><a
 href="@PACKAGE_URL@padevchooser-0.9.2.tar.gz">Version 0.9.2</a> released; initial release</p>
 
@@ -55,7 +58,7 @@ sound server</a>. Specifically it can do for you:</p>
 <ul>
   <li>Notify about new sink/sources becoming available on the LAN</li>
   <li>Quickly change the default PulseAudio sink/source/server assigned to the current X11 display, selecting devices available on the LAN</li>
-  <li>Start the auxiliary tools <a href="http://0pointer.de/lennart/projects/pavucontrol/">PulseAudio Volume Control</a>, <a href="http://0pointer.de/lennart/projects/pavumeter/">PulseAudio Volume Meter</a>, <a href="http://0pointer.de/lennart/projects/paman/">PulseAudio Manager</a>
+  <li>Start the auxiliary tools <a href="http://0pointer.de/lennart/projects/pavucontrol/">PulseAudio Volume Control</a>, <a href="http://0pointer.de/lennart/projects/pavumeter/">PulseAudio Volume Meter</a>, <a href="http://0pointer.de/lennart/projects/paman/">PulseAudio Manager</a>, <a href="http://0pointer.de/lennart/projects/paprefs/">PulseAudio Preferences</a>
 </ul>
   
 <p>Everybody loves <a href="@PACKAGE_URL@/screenshot.png">screenshots</a>.</p>
@@ -110,7 +113,7 @@ compilation and <tt>make install</tt> (as root) for installation of
 <p>If you want to be notified whenever I release a new version of this software use the subscription feature of <a href="http://freshmeat.net/projects/padevchooser/">Freshmeat</a>.</p>
 
 <hr/>
-<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, July 2006</address>
+<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, August 2006</address>
 <div class="grey"><i>$Id$</i></div>
 
 </body>
