--- a/debian/control
+++ b/debian/control
@@ -8,9 +8,13 @@ Standards-Version: 3.7.2
 
 Package: padevchooser
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: pavumeter, pavucontrol, paman, paprefs
 Description: PulseAudio Device Chooser
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
  This is a simple GTK tool which registers an icon in the tray area and
  allows quick access to some features of the PulseAudio sound server.
  Specifically it can do for you:
