use libgnome-desktop apis to start programs with startup notification support
git-svn-id: file:///home/lennart/svn/public/padevchooser/trunk@29 e4aeda27-4315-0410-ac56-b21855d76123

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,5 +30,5 @@ padevchooser_LDADD=$(AM_LDADD) $(GUILIBS_LIBS) $(PULSE_LIBS)
 padevchooser_CFLAGS=$(AM_CFLAGS) $(GUILIBS_CFLAGS) $(PULSE_CFLAGS) 
 padevchooser_CFLAGS+=-DGLADE_FILE=\"$(pkgdatadir)/padevchooser.glade\" 
 padevchooser_CFLAGS+=-DDESKTOP_FILE=\"$(desktopdir)/padevchooser.desktop\" 
-padevchooser_CFLAGS+=-DEGG_COMPILATION 
+padevchooser_CFLAGS+=-DDESKTOP_DIR=\"$(desktopdir)\"
 
