building for fedora18
it at least builds again for fedora18 without any funky LD_LIBRARY_PATH or RPATH to find libpulsecommon...
will test again on Monday

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,9 +24,9 @@ bin_PROGRAMS=padevchooser
 dist_pkgdata_DATA=padevchooser.glade
 dist_desktop_DATA=padevchooser.desktop
 
-padevchooser_SOURCES=padevchooser.c x11prop.c x11prop.h browser.h browser.c pulsecore/avahi-wrap.c
+padevchooser_SOURCES=padevchooser.c x11prop.c x11prop.h browser.h browser.c stubs.c pulsecore/avahi-wrap.c
 
-padevchooser_LDADD=$(AM_LDADD) $(GUILIBS_LIBS) $(PULSE_LIBS) -lX11 -lavahi-common -lavahi-client -lpulsecommon-1.1
+padevchooser_LDADD=$(AM_LDADD) $(GUILIBS_LIBS) $(PULSE_LIBS) -lX11 -lavahi-common -lavahi-client
 padevchooser_CFLAGS=$(AM_CFLAGS) $(GUILIBS_CFLAGS) $(PULSE_CFLAGS) 
 padevchooser_CFLAGS+=-DGLADE_FILE=\"$(pkgdatadir)/padevchooser.glade\" 
 padevchooser_CFLAGS+=-DDESKTOP_FILE=\"$(desktopdir)/padevchooser.desktop\" 
