update debian packaging
- adopt package
  - update maintainer in debian/control
- source format 3.0 (quilt)
- switch to dh9
  - remove cdbs
  - engage dh-autoreconf
- build dependency for new upstream PKG_CHECK_MODULES gnome-desktop-2.0
- bump standards version
- update debian/copyright
  - due to upstream efforts, entire package is now GNU GPL-2 or later
  - add pointers to current upstream repositories
- add pointer to debian git repository to debian/control
- forward port and update quilt patches
  - DELETE configure.ac-fix-build-breakage-with-GNU-stow-instal.patch
    no longer needed, as dh_auto_configure passes --prefix to
    ./configure, rendering the stow stanza harmless.
  - DELETE Re-autotoolize-to-pick-up-changes-in-configure.ac.patch
    no longer needed, as (a) derived autotools files are now
    regenerated at build time, and (b) these files are no longer
    present as we are directly using upstream git rather than
    importing an autotools-generated tarball.
  - ADD configure.ac-update.patch
    add AM_PROG_CC_C_O per automake,
    remove AC_TYPE_SIGNAL per autoupdate
  - ADD src-padevchooser.desktop-remove-encoding-key.patch
    lintian says encoding key line in desktop file is obsolete

--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,15 @@
 Source: padevchooser
 Section: sound
 Priority: optional
-Maintainer: CJ van den Berg <cj@vdbonline.com>
-Build-Depends: debhelper (>= 5), cdbs, quilt, autotools-dev, libpulse-dev,
-    libgtk2.0-dev, libnotify-dev, libgconf2-dev, libglade2-dev, lynx,
-    asciidoc, xmlto
-Standards-Version: 3.7.2
+Maintainer: Barak A. Pearlmutter <bap@debian.org>
+Build-Depends: debhelper (>= 9),
+	dh-autoreconf,
+	libpulse-dev,
+	libgtk2.0-dev, libnotify-dev, libgconf2-dev, libglade2-dev,
+	libgnome-desktop-dev,
+	lynx, asciidoc, xmlto
+Standards-Version: 3.9.4
+Vcs-Git: git://anonscm.debian.org/pkg-pulseaudio/padevchooser.git
 
 Package: padevchooser
 Architecture: any
