increase precision of git ignore; ignore autotools compile script

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 *.o
-.*.swp
-.deps
+.deps/
+/aclocal.m4
+/autom4te.cache/
+/compile
+/config.h
+/config.h.in
+/config.log
+/config.status
+/configure
+/depcomp
+/doc/README
+/doc/README.html
+/install-sh
+/missing
+/src/padevchooser
+/stamp-h1
 Makefile
 Makefile.in
-aclocal.m4
-autom4te.cache/
-config.h
-config.h.in
-config.log
-config.status
-configure
-depcomp
-doc/README
-doc/README.html
-install-sh
-missing
-src/padevchooser
-stamp-h1
