silence lintian no-homepage-field
$ lintian padevchooser_*.deb
P: padevchooser: no-homepage-field

Perhaps this is not a "true" homepage, but it is the best we have.

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 9),
 	libgnome-desktop-dev,
 	lynx, asciidoc, xmlto
 Standards-Version: 3.9.4
+Homepage: https://github.com/d3matt/padevchooser
 Vcs-Git: git://anonscm.debian.org/pkg-pulseaudio/padevchooser.git
 
 Package: padevchooser
