--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,8 +24,8 @@ dist_desktop_DATA=padevchooser.desktop
 
 padevchooser_SOURCES=padevchooser.c x11prop.c x11prop.h browser.h browser.c stubs.c pulsecore/avahi-wrap.c
 
-padevchooser_LDADD=$(AM_LDADD) $(GUILIBS_LIBS) $(PULSE_LIBS) -lX11 -lavahi-common -lavahi-client
-padevchooser_CFLAGS=$(AM_CFLAGS) $(GUILIBS_CFLAGS) $(PULSE_CFLAGS) 
+padevchooser_LDADD=$(AM_LDADD) $(GUILIBS_LIBS) $(PULSE_LIBS) $(AVAHI_LIBS)
+padevchooser_CFLAGS=$(AM_CFLAGS) $(GUILIBS_CFLAGS) $(PULSE_CFLAGS) $(AVAHI_CFLAGS)
 padevchooser_CFLAGS+=-DGLADE_FILE=\"$(pkgdatadir)/padevchooser.glade\" 
 padevchooser_CFLAGS+=-DDESKTOP_FILE=\"$(desktopdir)/padevchooser.desktop\" 
 padevchooser_CFLAGS+=-DDESKTOP_DIR=\"$(desktopdir)\"
