AM_LDFLAGS is the right thing for linker flags in automake

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -29,4 +29,4 @@ AM_CPPFLAGS+=-DGLADE_FILE=\"$(pkgdatadir)/padevchooser.glade\"
 AM_CPPFLAGS+=-DDESKTOP_FILE=\"$(desktopdir)/padevchooser.desktop\" 
 AM_CPPFLAGS+=-DDESKTOP_DIR=\"$(desktopdir)\"
 
-padevchooser_LDADD=$(GUILIBS_LIBS) $(PULSE_LIBS) $(AVAHI_LIBS)
+AM_LDFLAGS=$(GUILIBS_LIBS) $(PULSE_LIBS) $(AVAHI_LIBS)
