--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9),
 	dh-autoreconf,
 	libpulse-dev,
 	libgtk2.0-dev, libnotify-dev, libgconf2-dev, libglade2-dev,
-	libgnome-desktop-dev,
+	libgnome-desktop-dev, libgnomeui-dev,
 	lynx, asciidoc, xmlto
 Standards-Version: 3.9.4
 Homepage: https://github.com/d3matt/padevchooser
