--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Build-Depends: debhelper (>= 9),
 	libpulse-dev,
 	libgtk2.0-dev, libnotify-dev, libgconf2-dev, libglade2-dev,
 	libgnome-desktop-dev, libgnomeui-dev,
-	lynx, asciidoc, xmlto
+	lynx, asciidoc, xmlto,
+	libatomic-ops-dev
 Standards-Version: 3.9.4
 Homepage: https://github.com/d3matt/padevchooser
 Vcs-Git: git://anonscm.debian.org/pkg-pulseaudio/padevchooser.git
